# Team-2-Project

./: .env.example  .gitattributes  .gitignore  DESIGN.md  PRODUCT.md  README.md  aligned-verification.json  auth.config.ts  auth.ts  compare_results.py  config.json  debug_types.py  eslint.config.mjs  gen_prompts.py  middleware.ts  next.config.ts  nonaligned-verification.json  package-lock.json  package.json  pyproject.toml  report_engl2044.json  report_output.json  run_aligned.py  run_nonaligned.py  show_chunks.py  show_element.py  show_report.py  show_results.py  tailwind.config.js  test_creds.py
.claude/: launch.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
app/: globals.css  layout.tsx  page.tsx
backend/: audit_runner.py  db.py  main.py  requirements.txt
components/: AppShell.tsx  ExportModal.tsx  Header.tsx  IngestionModal.tsx  InspectorPanel.tsx  JsonViewerModal.tsx  LoginPage.tsx  RubricNav.tsx  Sidebar.tsx  StandardCard.tsx  StudentDashboard.tsx  VideoComplianceModal.tsx  profile-menu.tsx  settings-dialog.tsx  theme-toggle.tsx
frontend/: index.html  package-lock.json  package.json  vite.config.js
lib/: account-store.ts  course-store.ts  motion.ts  status.ts  types.ts  users.ts
reports/: aligned-intro-course-content.txt
tests/: test_audit_runner.py  test_block_builder.py  test_checks_captions.py  test_checks_contrast.py  test_checks_headings.py  test_checks_images.py  test_checks_links.py  test_checks_tables.py  (+14 more)
(+176 files in other folders)
