[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvc-rubric"
version = "0.1.0"
description = "CVC Online Course Design Rubric Analysis Engine"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "boto3>=1.34",
    "click>=8.1",
    "tiktoken>=0.7",
    "pydantic>=2.6",
    "rich>=13.7",
    "wcag-contrast-ratio>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "freezegun==1.5.1",
]

[project.scripts]
analyze = "cvc_rubric.cli:cli"
parse   = "cvc_rubric.cli:parse_cmd"
audit   = "cvc_rubric.cli:audit_cmd"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that call the real LLM (deselect with -m 'not integration')",
    "golden: marks golden-file tests that require a real .imscc fixture",
]
